[gd_scene load_steps=11 format=3 uid="uid://ber2vpmfyv0vg"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_q4g3r"]
[ext_resource type="Shader" path="res://scenes/HowToPlay.gdshader" id="2_hoetq"]
[ext_resource type="Texture2D" uid="uid://cuom7irik3pva" path="res://assets/A desert with a stick-man in a doom and gloom.jpg" id="3_tsw05"]
[ext_resource type="Texture2D" uid="uid://c204jlwai72go" path="res://assets/Title.png" id="4_1w8gq"]
[ext_resource type="Shader" path="res://scenes/Title.gdshader" id="4_qd80t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44qsg"]
shader = ExtResource("2_hoetq")
shader_parameter/darken_strength = 0.3

[sub_resource type="Theme" id="Theme_lovow"]
default_font_size = 36
Button/colors/font_color = Color(0.941176, 0.443137, 0.933333, 1)

[sub_resource type="Theme" id="Theme_suaft"]
default_font_size = 26
Button/colors/font_color = Color(0.941176, 0.443137, 0.933333, 1)

[sub_resource type="Theme" id="Theme_qt5x1"]
default_font_size = 38
Button/colors/font_color = Color(0.941176, 0.443137, 0.933333, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yb15n"]
shader = ExtResource("4_qd80t")
shader_parameter/brightness = 1.3

[node name="StartScreen" type="Control"]
layout_mode = 3
anchor_right = 0.614
anchor_bottom = 0.607
offset_right = -785.92
offset_bottom = -437.04
script = ExtResource("1_q4g3r")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_44qsg")
layout_mode = 0
offset_right = 1939.0
offset_bottom = 1312.0
texture = ExtResource("3_tsw05")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 826.0
offset_top = 654.0
offset_right = 1033.0
offset_bottom = 712.0
theme = SubResource("Theme_lovow")
text = "START"
autowrap_mode = 2

[node name="HowToPlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 721.0
offset_right = 1031.0
offset_bottom = 786.0
theme = SubResource("Theme_suaft")
text = "HOW TO PLAY"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 826.0
offset_top = 794.0
offset_right = 1034.0
offset_bottom = 851.0
theme = SubResource("Theme_qt5x1")
text = "EXIT
"

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_yb15n")
layout_mode = 0
offset_left = 215.0
offset_top = 279.0
offset_right = 1738.0
offset_bottom = 447.0
texture = ExtResource("4_1w8gq")
